--- a/projects/mfe1/src/app/home/home.component.html
+++ b/projects/mfe1/src/app/home/home.component.html
@@ -1,1 +1,8 @@
-<p>home works!</p>
+<div>
+    <img src="../../assets/angular.png" width="50">
+</div>
+<h1>Welcome!</h1>
+
+<p>
+    <a routerLink="/flights-search">Search Flights</a>
+</p>
